Complete repository transformation with practical projects, visual learning map, community hub, and 2024-2025 research implementations

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
-transformers
-torch
-numpy
-tqdm
-bitsandbytes
-scikit-learn
-peft
-accelerate 
+transformers>=4.35.0
+torch>=2.0.0
+numpy>=1.21.0
+tqdm>=4.64.0
+bitsandbytes>=0.41.0
+scikit-learn>=1.0.0
+peft>=0.6.0
+accelerate>=0.24.0
+auto-gptq>=0.4.0
+awq>=0.1.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
+Pillow>=8.3.0
+datasets>=2.14.0
+evaluate>=0.4.0
+sentencepiece>=0.1.97
+protobuf>=3.20.0 
